--- a/Download.html
+++ b/Download.html
@@ -105,13 +105,11 @@
 
   <!-- Centered Image -->
   <div class="center-image">
-    <img src="./images/your-image.jpg" alt="Centered Image">
+    <img src="./images/down.jpg" alt="Centered Image">
   </div>
 
   <!-- Additional Information Container -->
   <div class="container">
-    <h2>Additional Information</h2>
-    <p>This is where you can add more information about your project.</p>
     <!-- Add more content as needed -->
 
    <!-- Download Form -->
