--- a/Download.html
+++ b/Download.html
@@ -105,7 +105,7 @@
 
   <!-- Centered Image -->
   <div class="center-image">
-    <img src="./images/down.png" alt="Centered Image">
+    <img src="./images/down.webp" alt="Centered Image">
   </div>
 
   <!-- Additional Information Container -->
