--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -11,21 +12,17 @@
   <div class="top-bar">
     <img src="./images/logo.png" alt="logo1">
     <ul>
-      <li><a href="https://github.com/HOS-OS/Acorn/releases/latest/">Releases</a></li>
-      <li><a href="./Download.html
-">Download</a></li>
-      <li><a href="https://github.com/HOS-OS/Acorn">GitHub</a></li>
+      <li><a href="./Download.html">Download</a></li>
+      <li><a href="./Releases.html">Releases</a></li>
+      <li><a href="https://github.com/HOS-OS/Acorn" target="_blank">GitHub</a></li>
       <!-- Add more links as needed -->
     </ul>
   </div>
-
-  <!-- Main Content -->
   <div class="loadcontainer">
     <br></br>
     <img id="logo" src="./images/logo.png"" alt="logo2">
   </div>
   
-
    <!-- Main Content -->
 <div class="sitecontainer" id="additional-content">
   <br></br>
@@ -35,15 +32,23 @@
     <h2>Acorn Browser</h2>
     <p>A fast, minimalist, and efficient browser.</p>
     <a href="./Download.html" class="btn">Download Acorn Browser</a>
-    
-    <!-- New Section -->
     <div id="about-acorn">
       <p>Acorn Browser is a web browser that's created with Electron and styled with Tailwind CSS, based on Ninetails Browser.</p>
      </div>
-    <!-- End of New Section -->
-   
      </div>
-     
+     <br></br>
+     <br></br>
+     <footer>
+      <div class="copyright">
+        &copy; 2024 Hunter Null. All rights reserved.
+      </div>
+      <div class="contact-info">
+        Contact: 
+        <a href="mailto:hosos.suport@gmail.com">hosos.suport@gmail.com</a>
+        | Phone: +4192806885
+      </div>
+    </footer>
+  
 </div>
 
 
