--- a/Download.html
+++ b/Download.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <!-- Download page where user can select M1 or Intel verion of app for macOS -->
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Acorn Browser Download</title>
   <link rel="stylesheet" href="./styles/Download.css">
 </head>
