--- a/Template Page.html
+++ b/Template Page.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Acorn Browser Template Page</title>
-  <link rel="stylesheet" href="./styles/Download.css">
+  <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
   <!-- Top Bar -->
